[tool.poetry]
name = "pyradox-tabular"
version = "0.1.0"
description = "State of the Art Neural Networks for Tabular Deep Learning"
authors = ["Ritvik19 <rastogiritvik99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
