[tool.poetry]
name = "pyradox-tabular"
version = "1.0.2"
description = "State of the Art Neural Networks for Tabular Deep Learning"
authors = ["Ritvik19 <rastogiritvik99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.6.2"
tensorflow-probability = "0.14.1"
tensorflow-addons = "0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
